@@ -1,7 +1,3 @@
-- Provide parsed tree caching facility.
-
-- Provide pipelining tools.
-
 - Preserve xmlns="http://www.w3.org/1999/xhtml" On tags when it's
   provided in the parsed XML input during xhtml output (or figure out
   why it makes the XML writer go berserk and output every tag with
@@ -20,4 +16,9 @@
   mode.
 
 - Investigate why using the "plope.com" namespace identifier is bad.
+
+- HTML serializer only calls _escape_cdata/_escape_attrib if necessary
+  instead of calling it without regard to its need.  This needs to be done
+  for the XML serializer too.
+
 
